# betbot-ai

./: .gitignore  README.md  pyproject.toml
betbot/: __init__.py  affiliate.py  bankroll.py  cli.py  daemon.py  dashboard.py  odds.py  predictor.py  profit_tracker.py
betbot/agents/: __init__.py  affiliate_agent.py  arbitrage_agent.py  bankroll_agent.py  base.py  bet_agent.py  content_agent.py  coordinator.py  dashboard_agent.py  export_agent.py  odds_agent.py  predictor_agent.py  settle_agent.py  trends_agent.py  value_agent.py
betbot_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
