[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "betbot-ai"
version = "1.0.0"
description = "AI-powered sports betting analytics and affiliate marketing bot"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "requests>=2.28",
    "beautifulsoup4>=4.12",
    "pandas>=2.0",
    "scikit-learn>=1.3",
]

[project.scripts]
betbot = "betbot.cli:cli"

[tool.setuptools.packages.find]
include = ["betbot*"]
